syntax = "proto3";

option java_multiple_files = true;
option java_package = "atafelska.chat";
option java_outer_classname = "ChatProto";

package chat;

message User {
    string id = 1;
    string name = 2;
    string password = 3;
    bool isGuest = 4;
}

message Message {
    User user = 1;
    string text = 2;
    int64 timestamp = 3;
}

message Chat {
    repeated Message messages = 1;
    repeated User user = 2;
    User currentUser = 3;
}

message CurrentUsers {
    repeated User users = 1;
}

service ChatService {
    rpc register(User) returns (User);
    rpc getChat(User) returns (Chat);
    rpc unsubscribe(User) returns (User);
    rpc sendMessage(Message) returns (Message);
    rpc observeMessages(User) returns (stream Message);
    rpc observeUsers(User) returns (stream CurrentUsers);
}
